[gd_scene load_steps=4 format=3 uid="uid://cellovyprro7"]

[ext_resource type="Shader" uid="uid://dsw7hdvildblk" path="res://Scripts/Shaders/debuff_ui_highlight.gdshader" id="1_so752"]
[ext_resource type="Script" uid="uid://cx5ckrdsliksj" path="res://Scripts/Debuff/debuff_icon.gd" id="2_so752"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q7kf0"]
shader = ExtResource("1_so752")
shader_parameter/glow_intensity = 0.0
shader_parameter/glow_color = Color(1, 1, 0, 1)

[node name="DebuffIcon" type="TextureButton"]
material = SubResource("ShaderMaterial_q7kf0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1239.0
offset_bottom = -677.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_so752")

[node name="LabelBg" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HoverLabel" type="Label" parent="LabelBg"]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
